Fix some spacing issues with the exercise buttons (using gap) and minor color changes on some text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,7 +348,7 @@ label {
     }
 
     .span-new {
-        color: var(--clr-grey-blue-lightest);
+        color: var(--clr-grey-blue-lighter);
     }
 
     .span-exercise {
@@ -432,7 +432,7 @@ label {
     padding              : 0 1rem;
     display              : grid;
     grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
-    gap                  : 0.2rem;
+    gap                  : 0.3rem;
 
     label {
         font-size: var(--slightly-smaller-font-size);
@@ -453,18 +453,18 @@ label {
     .button-add {
         width        : 100%;
         border-radius: 0.4rem;
-        color        : rgb(36, 36, 36);
+        color        : rgb(31, 31, 31);
     }
 
     .button-exercise {
         background-color: var(--clr-lilac);
         padding         : 0.55rem 0;
-        margin-bottom   : 0.5rem;
     }
 
     .label-minutes-duration,
     .label-seconds-duration {
         text-align: left;
+        margin-top: 0.5rem;
     }
 
     .input-minutes-duration,
